borsh/tests/snapshots/test_cow__cow_byte_slice.snap
---
source: borsh/tests/test_cow.rs
expression: encoded
---
[
    10,
    0,
    0,
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
]
