borsh/tests/snapshots/test_cow__cow_str.snap
---
source: borsh/tests/test_cow.rs
expression: encoded
---
[
    12,
    0,
    0,
    0,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    105,
    110,
    112,
    117,
    116,
]
